Create dialog form for adding a new book

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <h1>Library</h1>
+    <button class="new">New Book</button>
+    <dialog id="new-book-dialog">new dialog</dialog>
     <div id="book-container"></div>
 
     <script src="index.js"></script>
