--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Library</h1>
     <button class="new">New Book</button>
-    <dialog id="new-book-dialog">new dialog</dialog>
+    <dialog id="new-book-dialog"></dialog>
     <div id="book-container"></div>
 
     <script src="index.js"></script>
