--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Library</title>
 
+    <link rel="icon" href="library-favicon.png" type="image/png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Library</h1>
+    <h1>My Library</h1>
     <button class="new">New Book</button>
     <dialog id="new-book-dialog"></dialog>
     <div id="book-container"></div>
